fixed gap

--- a/style.css
+++ b/style.css
@@ -98,7 +98,7 @@ body {
     box-shadow: 1px 20px 44px -7px rgba(105, 112, 119, 0.37);
 }
 
-@media (min-width: 1100px) {
+@media (min-width: 1150px) {
 
     .not-cards {
         max-width: 500px;
@@ -112,9 +112,12 @@ body {
     .cards {
         display: flex;
         flex-wrap: wrap;
-        gap: 0.5em;
         justify-content: center;
         align-items: center;
+    }
+
+    .supervisor, .team-builder, .karma, .calculator {
+        margin: 1em;
     }
 
     .supervisor:hover, .team-builder:hover, .karma:hover, .calculator:hover {
